# rdks100_slam

./: .gitignore  FIRE_SMOKE_GUIDE.md  INNOVATION_DEMO.md  LIVOX_MID360_MIGRATION.md  MID360S_RVIZ_SETUP.md  MODULE_PLAN.txt  README.md  ackermann_control_chain_troubleshooting.txt  build_ros2_ws.sh  deploy.sh  rdk_slam_setup.sh  start.sh
backend/: main.py  requirements.txt
backend/app/api/: control.py  device.py  navigation.py  slam.py  vlm.py
backend/app/core/: config.py  websocket_manager.py
backend/app/services/: data_pusher.py  mock_data.py  ros2_bridge.py  safety_gate.py
fan-curve/: README.md  fan_curve.py  rdk-fan-curve.service
frontend/: .env  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
frontend/src/: App.vue  main.ts
frontend/src/api/: http.ts  websocket.ts
frontend/src/components/: FireAlertOverlay.vue  SafetyEventOverlay.vue
frontend/src/composables/: useFireAlert.ts  useSafetyEvent.ts  useVlmProvider.ts
frontend/src/config/: index.ts
frontend/src/layouts/: MainLayout.vue
frontend/src/router/: index.ts
frontend/src/stores/: robot.ts
frontend/src/styles/: global.scss  variables.scss
frontend/src/types/: components.d.ts
frontend/src/views/control/: ControlView.vue
frontend/src/views/dashboard/: DashboardView.vue
frontend/src/views/imu/: ImuView.vue
frontend/src/views/lidar/: LidarView.vue
frontend/src/views/navigation/: NavigationView.vue
frontend/src/views/settings/: SettingsView.vue
frontend/src/views/slam/: SlamView.vue
frontend/src/views/video/: VideoView.vue
my_map/: README.md
prompt/: VLM_Nav2_创新点方案步骤.txt
ros2_ws/src/backup_old_ld14p/: ackermann_slam.launch.py  slam_ld14p.launch.py  test_lidar.sh
ros2_ws/src/czybot_navigation2/: CMakeLists.txt  README_RDK_S100.md  README_SLAM.md  README_真实小车SLAM.md  STM32问题诊断结果.md  TJC_HMI配置指南.md  package.xml  修复方案.md  快速开始.md  统一波特率为115200步骤.md  运动控制导航问题修改建议.md  问题排查总结.md
ros2_ws/src/czybot_navigation2/behavior_trees/: navigate_through_poses_ackermann.xml  navigate_to_pose_ackermann.xml
ros2_ws/src/czybot_navigation2/config/: nav2_params.yaml  nav2_view.rviz  slam_rviz.rviz  slam_toolbox_params.yaml  tjc_hmi_params.yaml
ros2_ws/src/czybot_navigation2/launch/: livox_navigation.launch.py  localization.launch.py  nav2_only.launch.py  navigation2_launch.py  navigation_real_robot.launch.py  robot_with_hmi.launch.py  slam_real_robot.launch.py  tjc_hmi.launch.py
ros2_ws/src/czybot_navigation2/maps/: room.pgm  room.yaml
ros2_ws/src/czybot_navigation2/scripts/: ackermann_teleop_key.py  ackermann_teleop_key_optimized.py  diagnose_stm32.sh  dynamic_person_obstacle_node.py  fake_odom.py  long_monitor.py  monitor_stm32.py  send_goal.py  stm32_bridge.py  tjc_demo_publisher.py  tjc_hmi_bridge.py  verify_chassis.sh
ros2_ws/src/czybot_slam/: CMakeLists.txt  package.xml
ros2_ws/src/czybot_slam/config/: cartographer_2d.lua  cartographer_3d.lua  pointcloud_to_laserscan.yaml  slam_toolbox_params.yaml
ros2_ws/src/czybot_slam/launch/: cartographer_2d_slam.launch.py  cartographer_3d_slam.launch.py  slam_toolbox_mapping.launch.py
ros2_ws/src/czybot_slam/rviz/: slam_2d.rviz  slam_3d.rviz
ros2_ws/src/czybot_slam/scripts/: save_map.sh  scan_dedup.py  scan_filter.py
ros2_ws/src/d435i_bringup/: CMakeLists.txt  package.xml
ros2_ws/src/d435i_bringup/config/: d435i_params.yaml
ros2_ws/src/d435i_bringup/launch/: d435i_camera.launch.py
ros2_ws/src/d435i_detection/: package.xml  setup.cfg  setup.py
ros2_ws/src/d435i_detection/config/: detection_params.yaml  fire_smoke_params.yaml
ros2_ws/src/d435i_detection/d435i_detection/: detection_node.py  detection_node_bpu.py  fire_smoke_node.py
ros2_ws/src/d435i_detection/launch/: detection.launch.py  fire_smoke.launch.py
ros2_ws/src/ldlidar_ros2/: CMakeLists.txt  package.xml
ros2_ws/src/ldlidar_ros2/config/: cartographer_2d.lua  cartographer_handheld.lua  handheld_mapper.yaml  mapper_params_online_async.yaml
ros2_ws/src/ldlidar_ros2/launch/: cartographer_handheld.launch.py  cartographer_mapping.launch.py  gmapping.launch.py  hector_mapping.launch.py  ld14p.launch.py  rviz_view.launch.py  slam_mapping.launch.py
ros2_ws/src/ldlidar_ros2/rviz2/: slam_mapping.rviz
ros2_ws/src/ldlidar_ros2/scripts/: LD14P_scan_fre.py
ros2_ws/src/livox_ros_driver2/: CMakeLists.txt
ros2_ws/src/livox_ros_driver2/config/: MID360_config.json  MID360s_config.json
ros2_ws/src/livox_ros_driver2/launch_ROS2/: msg_MID360_launch.py
ros2_ws/src/livox_ros_driver2/src/: lds_lidar.cpp  livox_ros_driver2.cpp
ros2_ws/src/livox_ros_driver2/src/comm/: comm.h
ros2_ws/src/vlm_scene/: .gitignore  README.md  package.xml  setup.cfg  setup.py
ros2_ws/src/vlm_scene/config/: vlm_params.yaml
ros2_ws/src/vlm_scene/launch/: vlm.launch.py
ros2_ws/src/vlm_scene/vlm_scene/: vlm_node.py
ros2_ws/src/vlm_scene/vlm_scene/providers/: __init__.py  base.py  deepseek_text.py  factory.py  internvl_local.py  keys.py  mock.py  openai_vision.py  qwen_vl.py
ros2_ws/src/vlm_scene/vlm_scene/utils/: __init__.py  image_ops.py  keyframe.py
scripts/: demo_offline.sh  demo_recover.sh
